# PBN_infl

./: .gitignore  LICENSE  README.md  STG.py  articles.txt  requirements.txt  requirements2.txt
additional/: aeon_to_cana.py  plot_simulations.py
models/: .[id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1].aeon.bnet.swp  .simple.bnet.swp  ASYMMETRIC-CELL-DIVISION-A_fpared.aeon  CELL-CYCLE-TRANSCRIPTION_fpared.aeon  CORTICAL-AREA-DEVELOPMENT.bnet  CORTICAL-AREA-DEVELOPMENT.cana  CORTICAL-AREA-DEVELOPMENT_C4.aeon  DROSOPHILA-CELL-CYCLE.bnet  DROSOPHILA-CELL-CYCLE.cana  DROSOPHILA-GAP-D_fpared.aeon  LAC-OPERON_fpared.aeon  MIR-9-NEUROGENESIS.bnet  MIR-9-NEUROGENESIS.cana  MIR-9-NEUROGENESIS_fpared.aeon  MIR-9-NEUROGENESIS_fpared_non_obs.aeon  MIR-9-NEUROGENESIS_test_no_restrict.aeon  P53-MDM2-NETWORK.cana  TRP-BIOSYNTHESIS_fpared.aeon  [id-070]__[var-49]__[in-4]__[MAPK-CANCER-CELL-FATE].aeon.bnet  [id-070]__[var-49]__[in-4]__[MAPK-CANCER-CELL-FATE].cana  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1].aeon.bnet  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1].cana  [id-090]__[var-14]__[in-4]__[MAPK-REDUCED-2].cana  example.aeon  (+5 more)
pbn_ibmfa/: Cargo.toml  LICENSE
pbn_ibmfa/site/: attractors.js  clickableTable.js  client.js  decisionTree.js  index.html  styles.css
pbn_ibmfa/src/: _impl_ibmfa_computations.rs  _impl_regulation_constraint.rs  decision_tree.rs  driver_set.rs  ibmfa_computations.rs  lib.rs  main.rs  symbolic_sync_graph.rs  utils.rs
pbn_ibmfa/src/driver_set/: fixes.rs
pbn_ibmfa/src/symbolic_sync_graph/: attractors.rs  graph_operations.rs  regulation_constraints.rs
(+20 files in other folders)
