[package]
name = "pbn_ibmfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biodivine-lib-bdd = "0.4.2"
biodivine-lib-param-bn = "0.4.4"
websocket = "0.26.5"
json = "0.12.4"
clap = { version = "4.2.7", features = ["derive"] }
